// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<option_list>
<option_list_item>
<option_group>
<option>
<option_string>-a</option_string></option></option_group><description><paragraph>command-line option &quot;a&quot;</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>-b</option_string><option_argument delimiter=\\"\\"> file</option_argument></option></option_group><description><paragraph>options can have arguments
and long descriptions</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>--long</option_string></option></option_group><description><paragraph>options can be long also</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>--input</option_string><option_argument delimiter=\\"=\\">file</option_argument></option></option_group><description><paragraph>long options can also have
arguments</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>/V</option_string></option></option_group><description><paragraph>DOS/VMS-style options too</paragraph></description></option_list_item></option_list></document>"
`;

exports[`Emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis and inline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> and <strong>goodbye</strong></paragraph></document>"
`;

exports[`Emphasis followed by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> test</paragraph></document>"
`;

exports[`Emphasis preceded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis surrounded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis> things</paragraph></document>"
`;

exports[`Inline followed by emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong> and <emphasis>goodbye</emphasis></paragraph></document>"
`;

exports[`Random 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Random 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"Header 1\\" names=\\"Header 1\\">
<title>Header 1</title><paragraph>Text</paragraph><section ids=\\"Header 2\\" names=\\"Header 2\\"><title>Header 2</title><system_message line=\\"6\\"><paragraph>Title underline too short.</paragraph><literal_block>Header 2
-------</literal_block></system_message></section></section></document>"
`;

exports[`Random 2 2`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>Test.
Test2
Test3
-----</paragraph></document>"
`;

exports[`Random 4 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"Test3\\" names=\\"Test3\\">
<title>Test3</title><paragraph>This is a test.</paragraph><bullet_list bullet=\\"*\\"><list_item><paragraph>BUllet list 1</paragraph></list_item><list_item><paragraph>The emacs rst editor is weird.</paragraph></list_item></bullet_list></section></document>"
`;

exports[`Strong 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong></paragraph></document>"
`;

exports[`Title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"Title\\" names=\\"Title\\">
<title>Title</title><paragraph>Paragraph.</paragraph></section></document>"
`;
